=== Safari-90 ===

2003-07-22  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.

	Remove -seg_addr_table_filename to fix build.

        * JavaScriptCore.pbproj/project.pbxproj:

2003-07-17  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.

	- fixed 3330344 - Please change allowable client to "JavaScriptGlue" from "JSGlue"

        * JavaScriptCore.pbproj/project.pbxproj: Changed allowable client
	to "JavaScriptGlue"

2003-07-13  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - do some improvements Maciej suggested while reviewing the array index change

        * kjs/array_object.cpp:
        (getArrayIndex): Return a flag to say whether the index was value separately, to avoid
        in-band signalling.
        (ArrayInstanceImp::get): Update for new getArrayIndex parameters.
        (ArrayInstanceImp::put): Ditto.
        (ArrayInstanceImp::hasProperty): Ditto.
        (ArrayInstanceImp::setLength): Ditto.
        
        * kjs/ustring.cpp: (UString::toStrictUInt32): Check for overflow in a way that avoids doing
        a divide every time through the loop. But note that it adds an extra branch to the loop.
        I wonder which is worse.

2003-07-12  Darin Adler  <darin@apple.com>

        Fixed broken build.

        * kjs/identifier.h: Add toULong back. It's still used in WebCore (and maybe in JavaScriptGlue,
        for all I know).

2003-07-12  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        - fixed 3272777 -- array object indices treated as integers by Safari, but as strings in other web browsers

        JavaScriptCore did not implement the proper rule for what an array index is.

        * kjs/array_object.cpp:
        (getArrayIndex): Added. Implements the rule from the specification, which also provides a handy
        "not an array index" value of 2^32-1.
        (ArrayInstanceImp::get): Use getArrayIndex.
        (ArrayInstanceImp::put): Ditto.